fix mobile overlap

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -17,7 +17,7 @@ footer {
   .triangle {
     position: absolute;
     left: 25px;
-    top: -27px;
+    top: -25px;
     background: white;
     width: 30px;
     height: 30px;
