--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -66,7 +66,7 @@ h1 {
 }
 
 .quote {
-  margin: 0;
+  margin: 0 0 60px 0;
   padding-top: 30px;
   max-width: 100%;
 }
